--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>ShootingGame</title>
+    <script src="constant.js"></script>
+    <script src="games/HolloweenShootingGame/index.js"></script>
     <script src="main.js"></script>
   </head>
   <body></body>
+  <img src="/games/HolloweenShootingGame/img/thumbnail.png" alt="test" />
 </html>
